--- a/demos/react/package.json
+++ b/demos/react/package.json
@@ -15,8 +15,12 @@
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false react-app-rewired start",
+    "start:quiet": "BROWSER=none yarn start",
     "build": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false react-app-rewired build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest",
+    "test:e2e": "start-server-and-test start:quiet http://localhost:3000 test:cypress",
+    "test:cypress": "cypress run --browser chrome --headless"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +41,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "~5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -45,12 +52,17 @@
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
+    "cypress": "^12.8.0",
     "https-browserify": "^1.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
+    "start-server-and-test": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4"
