--- a/demos/react/.env.example
+++ b/demos/react/.env.example
@@ -1,2 +1,2 @@
-# Your Moralis Api key, that can be found in the dashboard. 
-REACT_APP_MORALIS_KEY = ''
+# Your Moralis Api key, that can be found in the dashboard.
+REACT_APP_MORALIS_API_KEY = ''
