change of structure.

--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
       "demos/firebase-auth-ext/*",
       "demos/firebase-streams-ext/*",
       "demos/firebase-streams-monitor/*",
-      "demos/firebase-nextjs/*",
-      "e2e/*"
+      "demos/firebase-nextjs/*"
     ]
   },
   "resolutions": {
