--- a/packages/common/solUtils/package.json
+++ b/packages/common/solUtils/package.json
@@ -32,6 +32,7 @@
     "test": "jest --runInBand --detectOpenHandles --forceExit --ci",
     "test:coverage": "yarn run test --coverage --coverageReporters json-summary",
     "test:watch": "yarn run test --watch",
+    "gen:api-types": "openapi-typescript https://solana-gateway.moralis.io/api-json --output src/operations/openapi.ts",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf ./node_modules/.cache/nx",
     "build": "rollup -c",
