--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "test": "yarn nx run-many --target=test --all",
     "test:watch": "yarn nx run-many --target=test:watch --all",
     "test:coverage": "yarn nx run-many --target=test:coverage --all",
-    "test:e2e": "yarn nx run-many --target=test:e2e --all",
+    "test:e2e": "yarn nx run-many --target=test:e2e --all --parallel=1",
     "format": "yarn prettier . \"**/*.+(js|ts|json)\" --write",
     "format:check": "yarn prettier . \"**/*.+(js|ts|json)\" --check",
     "release": "yarn build && changeset publish",
