--- a/packages/aptosApi/package.json
+++ b/packages/aptosApi/package.json
@@ -46,5 +46,8 @@
     "@moralisweb3/api-utils": "^2.18.0",
     "@moralisweb3/common-aptos-utils": "^2.18.0",
     "@moralisweb3/common-core": "^2.18.0"
+  },
+  "typedoc": {
+    "entryPoint": "./src/index.ts"
   }
 }
