--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "eslint-plugin-jest": "^27.2.1",
     "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
-    "jest": "29.3.1",
+    "jest": "^29.5.0",
     "nx": "^14.5.10",
     "openapi-types": "^12.0.0",
     "prettier": "^2.8.0",
     "rdme": "^7.5.0",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.21",
     "typedoc-plugin-markdown": "^3.14.0",
