--- a/packages/apiGenerator/package.json
+++ b/packages/apiGenerator/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.6",
     "axios": "^1.2.2",
-    "jest": "29.3.1",
+    "jest": "^29.5.0",
     "openapi-types": "^12.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
