--- a/packages/common/aptosUtils/package.json
+++ b/packages/common/aptosUtils/package.json
@@ -44,7 +44,7 @@
     "@moralisweb3/eslint-config": "^1.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "jest": "29.3.1",
+    "jest": "^29.5.0",
     "openapi-typescript": "^5.2.0",
     "rollup": "^3.10.1",
     "rollup-plugin-cleaner": "^1.0.0",
