--- a/packages/common/core/package.json
+++ b/packages/common/core/package.json
@@ -45,7 +45,7 @@
     "@moralisweb3/eslint-config": "^1.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "jest": "29.3.1",
+    "jest": "^29.5.0",
     "msw": "0.49.1",
     "rollup": "^3.10.1",
     "rollup-plugin-cleaner": "^1.0.0",
