--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -45,7 +45,7 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/ethereumjs-util": "5.2.0",
-    "jest": "29.3.1",
+    "jest": "^29.5.0",
     "openapi-typescript": "^5.2.0",
     "rollup": "^3.10.1",
     "rollup-plugin-cleaner": "^1.0.0",
