--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "test:e2e": "yarn nx run-many --target=test:e2e --all --parallel=1",
     "format": "yarn prettier . \"**/*.+(js|ts|json)\" --write",
     "format:check": "yarn prettier . \"**/*.+(js|ts|json)\" --check",
-    "release": "yarn build && changeset publish",
-    "generate": "nx run @moralisweb3/codegen:generate"
+    "release": "yarn build && changeset publish"
   },
   "workspaces": {
     "packages": [
