✨ import available moralis/common-aptos-utils

--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -139,6 +139,9 @@
       "common-evm-utils": [
         "lib/commonEvmUtils/index.d.ts"
       ],
+      "common-aptos-utils": [
+        "lib/commonAptosUtils/index.d.ts"
+      ],
       "common-sol-utils": [
         "lib/commonSolUtils/index.d.ts"
       ],
