fix: fixed generated toJSON() methods.

--- a/packages/apiGenerator/package.json
+++ b/packages/apiGenerator/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "gen:aptos": "ts-node src/index.ts ../../common/aptosUtils",
+    "gen:evm": "ts-node src/index.ts ../../common/evmUtils",
     "gen:playground": "ts-node src/index.ts ../playground",
     "test": "jest",
     "test:watch": "jest --watch"
