hybrid api generator.

--- a/packages/apiGenerator/package.json
+++ b/packages/apiGenerator/package.json
@@ -5,6 +5,7 @@
     "gen:aptos": "ts-node src/index.ts ../../common/aptosUtils",
     "gen:evm": "ts-node src/index.ts ../../common/evmUtils",
     "gen:playground": "ts-node src/index.ts ../playground",
+    "gen:all": "yarn gen:aptos && yarn gen:evm",
     "test": "jest",
     "test:watch": "jest --watch"
   },
